# pyweif

./: CMakeLists.txt  pyproject.toml  vcpkg-configuration.json  vcpkg.json
.github/workflows/: python-package.yml  python-wheels.yml
.overlay-ports/libweif/: portfile.cmake  vcpkg.json
docs/: conf.py  index.rst  modules.rst  pyweif.af.rst  pyweif.df.rst  pyweif.rst  pyweif.sf.rst
src/: af.cpp  af.h  df.cpp  function_ref.h  pyweif.cpp  sf.cpp  sf.h  spectral_response.cpp  weight_function.cpp
tests/: test_weight_function.py
