[build-system]
requires = ["scikit-build-core>=0.3.3", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
version = "0.1.0"
name = "pyweif"
description = "Python bindings for libweif"
authors = [
    { name = "Matwey V. Kornilov", email = "matwey.kornilov@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3 :: Only",
]
license = {text = "GPL-3.0-or-later"}
dependencies = []

[project.optional-dependencies]
dev = [
  "numpy",
  "pytest",
  "pytest-benchmark",
]

[tool.scikit-build]
build.verbose = true
wheel.py-api = "cp312"

[tool.tox]
requires = ["tox>=4.19"]
env_list = ["3.14", "3.13", "3.12", "3.11", "3.10", "3.9"]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
extras = ["dev"]
commands = [["python", "-m", "pytest"]]
passenv = ["CMAKE_TOOLCHAIN_FILE"]

[tool.pytest.ini_options]
markers = [
    "long: marks tests as long running (deselect with '-m \"not long\"')",
]
addopts = [
    "-m", "not long"
]

[tool.cibuildwheel]
before-all = "pipx install ninja && yum -y install curl zip unzip tar && git clone --depth 1 https://github.com/microsoft/vcpkg /opt/vcpkg && /opt/vcpkg/bootstrap-vcpkg.sh -disableMetrics"
environment = { CMAKE_TOOLCHAIN_FILE = "/opt/vcpkg/scripts/buildsystems/vcpkg.cmake", VCPKG_FORCE_SYSTEM_BINARIES = "1" }
build-verbosity = 1
config-settings = { "logging.level" = "INFO" }
test-extras = ["dev"]
test-command = "pytest {project}/tests"
archs = ["x86_64"]
skip = "*musllinux*"
